<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.erudika</groupId>
	<artifactId>velocity-netbeans</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<packaging>nbm</packaging>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.release>21</maven.compiler.release>
		<netbeans.api.version>RELEASE280</netbeans.api.version>
	</properties>

	<licenses>
		<license>
			<name>Common Development and Distribution License 1.0</name>
			<url>https://opensource.org/license/CDDL-1.0</url>
		</license>
	</licenses>

	<dependencies>
		<dependency>
			<groupId>org.netbeans.api</groupId>
			<artifactId>org-netbeans-modules-editor</artifactId>
			<version>${netbeans.api.version}</version>
		</dependency>
		<dependency>
			<groupId>org.netbeans.api</groupId>
			<artifactId>org-netbeans-modules-editor-completion</artifactId>
			<version>${netbeans.api.version}</version>
		</dependency>
		<dependency>
			<groupId>org.netbeans.api</groupId>
			<artifactId>org-netbeans-api-annotations-common</artifactId>
			<version>${netbeans.api.version}</version>
		</dependency>
		<dependency>
			<groupId>org.netbeans.api</groupId>
			<artifactId>org-netbeans-modules-java-source</artifactId>
			<version>${netbeans.api.version}</version>
		</dependency>
		<dependency>
			<groupId>org.netbeans.api</groupId>
			<artifactId>org-netbeans-modules-java-source-base</artifactId>
			<version>${netbeans.api.version}</version>
		</dependency>
		<dependency>
			<groupId>org.netbeans.api</groupId>
			<artifactId>org-netbeans-modules-options-api</artifactId>
			<version>${netbeans.api.version}</version>
		</dependency>
		<dependency>
			<groupId>org.netbeans.api</groupId>
			<artifactId>org-netbeans-modules-projectapi</artifactId>
			<version>${netbeans.api.version}</version>
		</dependency>
		<dependency>
			<groupId>org.netbeans.api</groupId>
			<artifactId>org-netbeans-api-java</artifactId>
			<version>${netbeans.api.version}</version>
		</dependency>
		<dependency>
			<groupId>org.netbeans.api</groupId>
			<artifactId>org-netbeans-modules-editor-bracesmatching</artifactId>
			<version>${netbeans.api.version}</version>
		</dependency>
		<dependency>
			<groupId>org.netbeans.api</groupId>
			<artifactId>org-netbeans-modules-editor-errorstripe-api</artifactId>
			<version>${netbeans.api.version}</version>
		</dependency>
		<dependency>
			<groupId>org.netbeans.api</groupId>
			<artifactId>org-netbeans-modules-editor-fold</artifactId>
			<version>${netbeans.api.version}</version>
		</dependency>
		<dependency>
			<groupId>org.netbeans.api</groupId>
			<artifactId>org-netbeans-modules-editor-lib</artifactId>
			<version>${netbeans.api.version}</version>
		</dependency>
		<dependency>
			<groupId>org.netbeans.api</groupId>
			<artifactId>org-netbeans-modules-editor-lib2</artifactId>
			<version>${netbeans.api.version}</version>
		</dependency>
		<dependency>
			<groupId>org.netbeans.api</groupId>
			<artifactId>org-netbeans-modules-java-editor-lib</artifactId>
			<version>${netbeans.api.version}</version>
		</dependency>
		<dependency>
			<groupId>org.netbeans.api</groupId>
			<artifactId>org-netbeans-modules-lexer</artifactId>
			<version>${netbeans.api.version}</version>
		</dependency>
		<dependency>
			<groupId>org.netbeans.api</groupId>
			<artifactId>org-netbeans-modules-html-lexer</artifactId>
			<version>${netbeans.api.version}</version>
		</dependency>
		<dependency>
			<groupId>org.netbeans.api</groupId>
			<artifactId>org-netbeans-modules-parsing-api</artifactId>
			<version>${netbeans.api.version}</version>
		</dependency>
		<dependency>
			<groupId>org.netbeans.api</groupId>
			<artifactId>org-netbeans-spi-editor-hints</artifactId>
			<version>${netbeans.api.version}</version>
		</dependency>
		<dependency>
			<groupId>org.netbeans.api</groupId>
			<artifactId>org-openide-awt</artifactId>
			<version>${netbeans.api.version}</version>
		</dependency>
		<dependency>
			<groupId>org.netbeans.api</groupId>
			<artifactId>org-openide-filesystems</artifactId>
			<version>${netbeans.api.version}</version>
		</dependency>
		<dependency>
			<groupId>org.netbeans.api</groupId>
			<artifactId>org-openide-loaders</artifactId>
			<version>${netbeans.api.version}</version>
		</dependency>
		<dependency>
			<groupId>org.netbeans.api</groupId>
			<artifactId>org-openide-modules</artifactId>
			<version>${netbeans.api.version}</version>
		</dependency>
		<dependency>
			<groupId>org.netbeans.api</groupId>
			<artifactId>org-openide-nodes</artifactId>
			<version>${netbeans.api.version}</version>
		</dependency>
		<dependency>
			<groupId>org.netbeans.api</groupId>
			<artifactId>org-openide-text</artifactId>
			<version>${netbeans.api.version}</version>
		</dependency>
		<dependency>
			<groupId>org.netbeans.api</groupId>
			<artifactId>org-openide-util-ui</artifactId>
			<version>${netbeans.api.version}</version>
		</dependency>
		<dependency>
			<groupId>org.netbeans.api</groupId>
			<artifactId>org-openide-util</artifactId>
			<version>${netbeans.api.version}</version>
		</dependency>
		<dependency>
			<groupId>org.netbeans.api</groupId>
			<artifactId>org-openide-util-lookup</artifactId>
			<version>${netbeans.api.version}</version>
		</dependency>
		<dependency>
			<groupId>org.netbeans.api</groupId>
			<artifactId>org-openide-windows</artifactId>
			<version>${netbeans.api.version}</version>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>6.0.3</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>javacc-maven-plugin</artifactId>
				<version>3.2.0</version>
				<configuration>
					<sourceDirectory>${project.basedir}/src/main/java/com/erudika/netbeans/velocity/jcclexer</sourceDirectory>
					<includes>
						<include>VelocityParser.jjt</include>
					</includes>
					<outputDirectory>${project.basedir}/src/main/java</outputDirectory>
					<interimDirectory>${project.build.directory}/generated-sources/jjtree</interimDirectory>
					<staleMillis>0</staleMillis>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.netbeans.utilities</groupId>
				<artifactId>nbm-maven-plugin</artifactId>
				<version>14.4</version>
				<extensions>true</extensions>
			</plugin>
		<plugin>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-compiler-plugin</artifactId>
			<version>3.15.0</version>
			<configuration>
				<annotationProcessorPaths>
					<path>
						<groupId>org.netbeans.api</groupId>
						<artifactId>org-openide-util-lookup</artifactId>
						<version>${netbeans.api.version}</version>
					</path>
					<path>
						<groupId>org.netbeans.api</groupId>
						<artifactId>org-netbeans-modules-options-api</artifactId>
						<version>${netbeans.api.version}</version>
					</path>
				</annotationProcessorPaths>
			</configuration>
		</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.5.5</version>
				<configuration>
					<argLine>--add-opens java.base/java.net=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.lang.reflect=ALL-UNNAMED</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.5.0</version>
				<configuration>
					<archive>
						<manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
					</archive>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
